org.mmisw.orrportal: MMI ORR Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2012-03-22  2.0.22.beta
	- More adjustments related with use of new AllegroGraph 4.4

2012-03-27  2.0.21.beta
	- Adjustments to align with changes in the Ont and Orr client libraries, which are
	  in part due to enabling the use of AllegroGraph 4.4 and others while
	  doing migration of the main ORR deployment to a new hosting.
	- Syncing on the 2.0.21.beta version.

2011-03-24  2.0.16.beta
	- bug fix in orrclient module: possible NPE in OntTypeUtil.determineType().
	  Exposed while trying to upload new version of CF vocab released today.
	- build.xml: explicitly compiling with source="1.5" target="1.5" as I recently updated by
	  local development environment (so, by default I would be compile for 1.6).

2010-11-16 
	Giving GWT 2.x another try. Now, with the latest as of today, which is 2.1.
	
	OrrService: Removed unnecessary import org.mmisw.orrportal.gwt.server.UploadServlet, 
	which was added by Eclipe because of a reference in a javadoc comment, but not actually 
	used in the code.  This made the GWT compiler (2.1) generate an error because this 
	server-side element is not part of the 'shared' interface (and that's correct). 
	Interestingly, GWT 1.5.2 works fine here, and it should be so as the element is NOT 
	actually used. One other weird thing about the newer GWT versions!
	
	Not significant outcome from this new attempt: Development mode continues to be
	intolerably slow (perhaps because of the mix between old and new underlying GWT mechanisms?),
	and the build process continues to be complicated, in fact, I couldn't make 2.1 to run
	properly because of an error related with SmartGWT, which does not happen with 2.0.4).
	So, reverting to the previous state, except for the change in OrrService above and the
	removal of the dependency on module com.google.gwt.gen2.Gen2 (ie., gwt-incubator_1-5_Dec_28.jar)